@@ -1,3 +1,8 @@
+2009-08-26  Jason Merrill  <jason@redhat.com>
+
+	* call.c (build_conditional_expr): Fix logic errors.
+	(build_new_op): Remove dead COND_EXPR handling.
+
 2009-08-24  Jason Merrill  <jason@redhat.com>
 
 	* cp-tree.h (DECL_DEFERRED_FN): Remove.
